# MicroTensor

./: CMakeLists.txt
app/: main.cpp
include/: Activation.h  Backend.h  Layer.h  Linear.h  Sequential.h  Tensor.h
scripts/: export_mnist.py
src/: Activation.cpp  Linear.cpp  Sequential.cpp  Tensor.cpp
src/backends/: Backend.cpp
src/backends/avx/: math_avx.cpp
src/backends/cpu/: math_cpu.cpp
src/backends/cuda/: math_cuda.cpp  math_kernels.cu  math_kernels.h
tests/: test_activations.cpp  test_benchmark.cpp  test_math.cpp  test_tensor.cpp
